# AUTOSAR_Classic_ECU_Development

MCAL/: Std_Types.h  index.html
MCAL/Adc/: Adc.c  Adc.h  Adc_Cfg.c  Adc_Cfg.h  Adc_Types.h  MCAL.code-workspace  Project_OSEK.code-workspace  TEST_GUIDE.md  TRIEN_KHAI_ADC_AUTOSAR.html  test_report.md
MCAL/Adc/docs/: ADC_IMPLEMENTATION_PLAN_STM32F103_SPL.md  ADC_TEST_CHECKLIST.md  ADC_TRACEABILITY_MATRIX.csv  ADC_TRACEABILITY_MATRIX.md
MCAL/Adc/examples/: Makefile  main_combined.c  main_dma.c  main_irq.c
MCAL/Adc/test_reports/: adc_api_renode_gdb_report_20260321_192736.json  adc_api_renode_gdb_report_20260321_192736.md  adc_api_traceability_20260321_192854.csv  (+6 more)
MCAL/Can/: Can.c  Can.h  CanIf.c  CanIf.h  CanIf_Types.h  Can_Cfg.h  Can_GeneralTypes.h  Can_Types.h  ComStack_Types.h  main.c
MCAL/Dio/: Dio.c  Dio.h
MCAL/Lin/: Lin.c  Lin.h  Lin_Cfg.h  Lin_GeneralTypes.h  Lin_Types.h
MCAL/Port/: Port.c  Port.h  Port_cfg.c  main.c
MCAL/Pwm/: Pwm.c  Pwm.h  Pwm_Cfg.h  SystemUI.code-workspace
MCAL/Spi/: Spi.c  Spi.h  Spi_Cfg.h  Spi_Hw.h  Spi_Types.h  main.c
Project_Sample/: Makefile  README.md  README_SETUP.md  add_to_path.ps1  build.ps1  check_install.ps1  find_renode.ps1  find_tools.ps1  install_all.ps1  install_renode.ps1  setup_project.py  setup_renode.ps1  update_path.ps1  verify_tools.ps1
Project_Sample/platform/: CMakeLists.txt
Project_Sample/platform/bsp/: startup_stm32f10x_md.s
Project_Sample/platform/bsp/linker/: stm32f103.ld
Project_Sample/platform/include/: Std_Types.h
Project_Sample/scripts/: stm32_sample.resc
Project_Sample/src/: main.c
(+45 files in other folders)
